<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingEnd="@dimen/md_keylines"
                android:paddingTop="@dimen/md_keylines">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/md_keylines"
                    android:layout_marginBottom="@dimen/md_keylines">

                    <TextView
                        android:layout_width="225dp"
                        android:layout_height="wrap_content"
                        android:text="@string/completed"
                        android:textSize="@dimen/article_titles" />

                    <TextView
                        android:id="@+id/total"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/article_titles"
                        android:gravity="center"
                        tools:text="4" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/md_keylines"
                    android:layout_marginBottom="@dimen/md_keylines">

                    <TextView
                        android:layout_width="225dp"
                        android:layout_height="wrap_content"
                        android:text="@string/approved"
                        android:textSize="@dimen/article_titles" />

                    <TextView
                        android:id="@+id/approved"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/article_titles"
                        android:gravity="center"
                        tools:text="2" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/article_keylines"
                    android:layout_marginBottom="@dimen/md_keylines">

                    <TextView
                        android:layout_width="225dp"
                        android:layout_height="wrap_content"
                        android:text="@string/average"
                        android:textSize="@dimen/article_titles" />

                    <TextView
                        android:id="@+id/average"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/article_titles"
                        android:gravity="center"
                        tools:text="50%" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/md_keylines"
                    android:layout_marginBottom="@dimen/md_keylines">

                    <TextView
                        android:layout_width="225dp"
                        android:layout_height="wrap_content"
                        android:text="@string/failure"
                        android:textSize="@dimen/article_titles" />

                    <TextView
                        android:id="@+id/failure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/article_titles"
                        android:gravity="center"
                        tools:text="20%" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/article_keylines"
                    android:layout_marginBottom="@dimen/md_keylines">

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/best"
                        android:textSize="@dimen/article_titles" />

                    <TextView
                        android:id="@+id/best"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/article_titles"
                        android:gravity="center"
                        tools:text="Mathematics" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/md_keylines"
                    android:layout_marginBottom="@dimen/md_keylines">

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/worst"
                        android:textSize="@dimen/article_titles" />

                    <TextView
                        android:id="@+id/worst"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/article_titles"
                        android:gravity="center"
                        tools:text="Mathematics" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>

</android.support.design.widget.CoordinatorLayout>